crucible-syntax/test-data/simulator-tests/loop.out.good
==== Begin Simulation ====

==== Finish Simulation ====
==== Proof obligations ====
Assuming:
* in main test-data/simulator-tests/loop.cbl:10:5: nonzero start
    not (eq 0 cx@0:n)
Prove:
  test-data/simulator-tests/loop.cbl:19:5: error: in main
  nonzero
  not (natLe (natSum (natMul 8 cx@0:n)) 0)
PROVED
